objects/Account_Group_Detail__c.object
<CustomObject>
    <fields>
        <fullName>AUID__c</fullName>
        <description>Stores the Company's AU ID.</description>
        <label>Account Ultimate ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Group_Detail_ID__c</fullName>
        <description>Stores the Group Detail ID of the FDEV location.</description>
        <label>FDEV Group Detail ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Group_ID__c</fullName>
        <description>Stores the FDEV Group ID</description>
        <label>FDEV Group ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Group_Name__c</fullName>
        <description>Stores the FDEV Group name.</description>
        <label>Sales Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Group__c</fullName>
        <description>Stores the ID of the corresponding record in ACCOUNT_GROUP__C object</description>
        <label>Account Group</label>
        <referenceTo>Account_Group__c</referenceTo>
        <relationshipLabel>Sales Account Details</relationshipLabel>
        <relationshipName>Sales_Account_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>Stores the Complete address of the site in question.</description>
        <label>Company Address</label>
        <length>1700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Coverage_Level__c</fullName>
        <description>Stores the coverage level of the rule.</description>
        <label>Coverage Level</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_BR_IND__c</fullName>
        <description>HQ BR Indicator</description>
        <label>HQ BR IND</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_PARTY_ID__c</fullName>
        <description>HQ Paraty Id</description>
        <label>HQ Party ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_SL_CSCID__c</fullName>
        <description>Stores the CSC ID.</description>
        <label>CSC ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_SL_CSCSITEID__c</fullName>
        <description>Stores the HQ/SL Site target ID of the location that is being pulled.</description>
        <label>Party ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_SL_DUNS_Number__c</fullName>
        <description>Stores the Location's DUNS NUMBER.</description>
        <label>DUNS Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_SL_Name__c</fullName>
        <description>Stores the FDEV location name.</description>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_VMDTL__c</fullName>
        <description>Stores CSC ID level Vertical Dtl info.</description>
        <label>Vertical Market (Dtl)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_VMSUB__c</fullName>
        <description>Stores CSC ID level Vertical Sub info.</description>
        <label>Vertical Market (Sub)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_VMTOP__c</fullName>
        <description>CSC ID level Vertical Top info.</description>
        <label>Vertical Market (Top)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_CSCID__c</fullName>
        <description>Stores CSC ID level Vertical Top info.</description>
        <label>Parent CSCID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Comments__c</fullName>
        <description>Stores the FDEV Rules' comments.</description>
        <label>FDEV Rule Comments</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rule_End_Date__c</fullName>
        <description>Stores the FDEV Rule's end date.</description>
        <label>FDEV Rule End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rule_ID__c</fullName>
        <description>Stores the Rule ID of the FDEV location.</description>
        <label>FDEV Rule ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Start_Date__c</fullName>
        <description>Stores the FDEV Rule's start date.</description>
        <label>FDEV Rule Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Split_Percentage__c</fullName>
        <description>Stores the Split percentage of the rule.</description>
        <label>Split Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Indicates whether the Group - Group Detail - Rule -   Site Target ID combination is active or not (This flag is FDEV oriented).</description>
        <label>Group Detail Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <description>Account Group Details for FDEV groups.</description>
    <label>Sales Account Detail</label>
    <nameField>
        <label>Sales Account Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Account Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>